<resources>
    <string name="App_Name" translatable="false">Unstoppable</string>
    <string name="Alert_Cancel">Cancel</string>
    <string name="Alert_Copy">Copy</string>
    <string name="Alert_Close">Close</string>
    <string name="Alert_Loading">Loading...</string>
    <string name="Alert_Restart">Restart</string>
    <string name="Alert_Skip" translatable="false">SKIP</string>
    <string name="Alert_Select" translatable="false">SELECT</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="Button_Skip">Skip</string>
    <string name="Button_Next">Next</string>
    <string name="Button_Enable">Enable</string>
    <string name="Button_Disable">Disable</string>
    <string name="Button_Close">Close</string>
    <string name="Button_Ok">OK</string>
    <string name="Button_Done">Done</string>
    <string name="Button_Retry">Retry</string>
    <string name="Button_Change">Change</string>
    <string name="Button_Add">Add</string>
    <string name="Button_Approve">Approve</string>
    <string name="Button_Connect">Connect</string>
    <string name="Button_Reject">Reject</string>
    <string name="Button_Disconnect">Disconnect</string>
    <string name="Button_Start">Start</string>
    <string name="Button_Create">Create</string>
    <string name="Button_Restore">Restore</string>
    <string name="Error">Error</string>
    <string name="NotAvailable">N/A</string>
    <string name="Wallet">%s Wallet</string>
    <string name="FooterText" translatable="false">© Horizontal Systems 2021</string>
    <string name="Intro_Wallet_Description">Store and Trade crypto. Have full control over assets. Remain anonymous.</string>
    <string name="Intro_Invest_Title">Invest Wisely</string>
    <string name="Intro_Invest_Description">Unmatched trading, monitoring and analytical instruments.</string>
    <string name="Intro_Independence_Title">Make finances independent</string>
    <string name="Intro_Independence_Description">The funds are under your exclusive control and no other entity.</string>
    <string name="Intro_Privacy_Title">Keep your privacy safe</string>
    <string name="Intro_Privacy_Description">Remain incognito and be able to keep your information private.</string>
    <string name="Welcome_PrivacySettings">Privacy Settings</string>
    <string name="Welcome_CreateWallet">Create Wallet</string>
    <string name="Welcome_RestoreWallet">Restore Wallet</string>
    <string name="Welcome_Version" translatable="false">version %s</string>
    <string name="RateApp_Title_Rate_This_App">Rate this App</string>
    <string name="RateApp_Description_Rate_This_App">Enjoying Unstoppable Wallet? Please take a moment to rate this app</string>
    <string name="RateApp_Button_RateIt">Rate It</string>
    <string name="RateApp_Button_NotNow">Not now</string>
    <string name="Restore_ChooseWallet">Choose Wallet</string>
    <string name="Restore_Enter_Key_Title">Enter Key</string>
    <string name="Restore_Enter_Key_Description_Mnemonic">Enter your private key for %1s Wallet which consists of %2s words. The words needs to be entered in correct order and separated by spaces.</string>
    <string name="Restore_ValidationFailed">Incorrect Key</string>
    <string name="Restore_InvalidWordCount">Invalid words count: %1$d but required %2$d</string>
    <string name="Restore_InvalidChecksum">Invalid Checksum</string>
    <string name="Select_Coins">Choose Crypto</string>
    <string name="Restore_BirthdayHeight_Hint">Wallet birthday height (optional)</string>
    <string name="Restore_BirthdayHeight_Description">This determines where to start scanning for transactions. Leave it blank to scan from the beginning, which takes a while.</string>
    <string name="Restore_BirthdayHeight_InvalidError">Invalid birthday height</string>
    <string name="Backup_Intro_Title">Backup</string>
    <string name="Backup_Intro_TitleShow">Show Key</string>
    <string name="Backup_Intro_Subtitle">The private key that will be shown next is the only way to restore your funds if your phone is ever lost, stolen, broken etc.\n\nMake sure that no one is watching your screen.\n\nThe coins controlled by this key: %s.</string>
    <string name="Backup_DisplayTitle">Private Key</string>
    <string name="Backup_BirthdayHeight">Birthday Height</string>
    <string name="Backup_Confirmation_Description">Enter words from your %s key</string>
    <string name="Backup_Confirmation_FailureAlertText"> Words do not match</string>
    <string name="Backup_Confirmation_CheckTitle">Check…</string>
    <string name="Backup_Button_Backup">Backup</string>
    <string name="Backup_Button_ShowKey">Show Key</string>
    <string name="Market_Field_MarketCap">MCap</string>
    <string name="Market_Field_Volume">Volume</string>
    <string name="Market_Field_PriceDiff">Price</string>
    <string name="Market_Title">Markets</string>
    <string name="Market_Search">Search</string>
    <string name="Market_Field_HighestCap">Highest Cap</string>
    <string name="Market_Field_LowestCap">Lowest Cap</string>
    <string name="Market_Field_HighestVolume">Highest Volume</string>
    <string name="Market_Field_LowestVolume">Lowest Volume</string>
    <string name="Market_Field_HighestPrice">Highest Price</string>
    <string name="Market_Field_LowestPrice">Lowest Price</string>
    <string name="Market_Sort_PopupTitle">Sort by</string>
    <string name="Market_TotalMarketCap">Total\nMarket Cap</string>
    <string name="Market_BtcDominance">BTC Dominance</string>
    <string name="Market_Volume24h">24h Volume</string>
    <string name="Market_TvlDeFi">TVL in DeFi</string>
    <string name="Market_DeFiCap">DeFi Cap</string>
    <string name="Market_SeeAll">See All</string>
    <string name="Market_PoweredByApi" translatable="false">Powered by CoinGeko API</string>
    <string name="Market_Tab_Overview">Overview</string>
    <string name="Market_Tab_Discovery">Discovery</string>
    <string name="Market_Tab_Watchlist">Watchlist</string>
    <string name="Market_Tab_Watchlist_EmptyList">You don\’t have any favorite assets.\nYou can add the favorites by clicking on star icon in the asset page</string>
    <string name="Market_Category_Rated">Rated</string>
    <string name="Market_Category_Rated_Description">Token ratings based on project security and market liquidity.</string>
    <string name="Market_Category_Blockchains">Blockchains</string>
    <string name="Market_Category_Blockchains_Description">Native cryptocurrencies on major blockchains. </string>
    <string name="Market_Category_Dexes">DEXes</string>
    <string name="Market_Category_Dexes_Description">Decentralized cryptocurrency exchanges.</string>
    <string name="Market_Category_Lending">Lending</string>
    <string name="Market_Category_Lending_Description">Protocols for lending and borrowing.</string>
    <string name="Market_Category_Privacy">Privacy</string>
    <string name="Market_Category_Privacy_Description">Projects working on privacy solutions.</string>
    <string name="Market_Category_Scaling">Scaling</string>
    <string name="Market_Category_Scaling_Description">Solutions for faster blockchain transactions.</string>
    <string name="Market_Category_Oracles">Oracles</string>
    <string name="Market_Category_Oracles_Description">Connecting real world data to smart contracts.</string>
    <string name="Market_Category_Prediction">Prediction</string>
    <string name="Market_Category_Prediction_Description">Markets to bet on events in the future.</string>
    <string name="Market_Category_YieldAggregators">Yield Aggregators</string>
    <string name="Market_Category_YieldAggregators_Description">Solutions for earning from idle crypto assets.</string>
    <string name="Market_Category_FiatStableCoins">Fiat Stablecoins</string>
    <string name="Market_Category_FiatStableCoins_Description">Crypto tokens pegged 1–1 to fiat currency.</string>
    <string name="Market_Category_AlgoStablecoins">Algo Stablecoins</string>
    <string name="Market_Category_AlgoStablecoins_Description">Stablecoins with algorithmic 1–1 price peg to fiat.</string>
    <string name="Market_Category_TokenizedBitcoin">Tokenized Bitcoin</string>
    <string name="Market_Category_TokenizedBitcoin_Description">Crypto tokens pegged 1–1 to Bitcoin price.</string>
    <string name="Market_Category_StablecoinIssuers">Stablecoin Issuers</string>
    <string name="Market_Category_StablecoinIssuers_Description">Decentralized issuers of fiat pegged stablecoin tokens.</string>
    <string name="Market_Category_ExchangeTokens">Exchange Tokens</string>
    <string name="Market_Category_ExchangeTokens_Description">Tokens issued by centralized exchanges.</string>
    <string name="Market_Category_Metals">Metals</string>
    <string name="Market_Category_Metals_Description">Tokens pegged to metal prices.</string>
    <string name="Market_Category_RiskManagement">Risk Management</string>
    <string name="Market_Category_RiskManagement_Description">Risk assessment, insurance and hedging.</string>
    <string name="Market_Category_Wallets">Wallets</string>
    <string name="Market_Category_Wallets_Description">Tokens issued by cryptocurrency wallets.</string>
    <string name="Market_Category_Synthetics">Synthetics</string>
    <string name="Market_Category_Synthetics_Description">Platforms for creating decentralized synthetic assets.</string>
    <string name="Market_Category_IndexFunds">Index Funds</string>
    <string name="Market_Category_IndexFunds_Description">Assets that pegged in price to a set of tokens.</string>
    <string name="Market_Category_NFT">NFT</string>
    <string name="Market_Category_NFT_Description">Marketplaces for trading NFT tokens.</string>
    <string name="Market_Category_Fundraising">Fundraising</string>
    <string name="Market_Category_Fundraising_Description">Fundraising and token sale platforms.</string>
    <string name="Market_Category_Gaming">Gaming</string>
    <string name="Market_Category_Gaming_Description">Crypto projects in gaming and VR sector.</string>
    <string name="Market_Category_B2B">B2B</string>
    <string name="Market_Category_B2B_Description">B2B service providers.</string>
    <string name="Market_Category_Infrastructure">Infrastructure</string>
    <string name="Market_Category_Infrastructure_Description">Projects building infrastructure solutions.</string>
    <string name="Market_Category_Staking">Staking ETH 2.0</string>
    <string name="Market_Category_Staking_Description">Protocols that reward liquidity providers.</string>
    <string name="Market_Category_Governance">Governance</string>
    <string name="Market_Category_Governance_Description">Decentralized governance protocols for DAOs.</string>
    <string name="Market_Category_CrossChain">Cross Chain</string>
    <string name="Market_Category_CrossChain_Description">Cross-chain protocols.</string>
    <string name="Market_Category_Computing">Computing</string>
    <string name="Market_Category_Computing_Description">Decentralized on-demand computing solutions.</string>
    <string name="Market_Search_Filter">Filter</string>
    <string name="Charts_Price">Price</string>
    <string name="Charts_Market">Market</string>
    <string name="Charts_Performance">Performance</string>
    <string name="Charts_About">About</string>
    <string name="Charts_Category">Category</string>
    <string name="Charts_Guide">Guide</string>
    <string name="Charts_Website">Website</string>
    <string name="Charts_Whitepaper">Whitepaper</string>
    <string name="Charts_Reddit">Reddit</string>
    <string name="Charts_Twitter">Twitter</string>
    <string name="Charts_Github">Github</string>
    <string name="Charts_IndicatorEMA" translatable="false">EMA</string>
    <string name="Charts_IndicatorMACD" translatable="false">MACD</string>
    <string name="Charts_IndicatorRSI" translatable="false">RSI</string>
    <string name="Charts_Volume">Vol</string>
</resources>