<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_height="wrap_content"
    tools:layout_width="match_parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <io.horizontalsystems.views.SettingsView
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:icon="@drawable/ic_academy_20"
        app:layout_constraintTop_toBottomOf="@id/category"
        app:position="single"
        app:title="@string/Charts_Guide" />

    <io.horizontalsystems.views.SettingsView
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:icon="@drawable/ic_academy_20"
        app:layout_constraintTop_toBottomOf="@id/guide"
        app:position="first"
        app:title="@string/Charts_Website" />

    <io.horizontalsystems.views.SettingsView
        android:id="@+id/whitepaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_clipboard"
        app:layout_constraintTop_toBottomOf="@id/website"
        app:position="middle"
        app:title="@string/Charts_Whitepaper" />

    <io.horizontalsystems.views.SettingsView
        android:id="@+id/reddit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_reddit"
        app:layout_constraintTop_toBottomOf="@id/whitepaper"
        app:position="middle"
        app:title="@string/Charts_Reddit" />

    <io.horizontalsystems.views.SettingsView
        android:id="@+id/twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_twitter"
        app:layout_constraintTop_toBottomOf="@id/reddit"
        app:position="middle"
        app:title="@string/Charts_Twitter" />

    <io.horizontalsystems.views.SettingsView
        android:id="@+id/telegram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_telegram"
        app:layout_constraintTop_toBottomOf="@id/twitter"
        app:position="middle"
        app:title="Telegram" />

    <io.horizontalsystems.views.SettingsView
        android:id="@+id/github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_github"
        app:layout_constraintTop_toBottomOf="@id/telegram"
        app:position="last"
        app:title="@string/Charts_Github" />
</merge>
