<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:clickable="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/rate_chart_menu"
        app:navigationIcon="@drawable/ic_back" />

    <io.horizontalsystems.bankwallet.ui.extensions.LockableNestedScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="32dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/coinRateLast"
                style="@style/Title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="?BottomDialogTextColor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="3,979.87" />

            <io.horizontalsystems.bankwallet.ui.extensions.RateDiffView
                android:id="@+id/coinRateDiff"
                style="@style/Subhead1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/coinRateLast"
                app:layout_constraintEnd_toEndOf="@+id/endGuideline"
                app:layout_constraintTop_toTopOf="@+id/coinRateLast"
                app:negativeColor="@color/leah"
                app:positiveColor="@color/leah"
                tools:text="-18" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chartPointsInfo"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="16dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coinRateLast">

                <!--Price and Date info-->

                <TextView
                    android:id="@+id/pointInfoPrice"
                    style="@style/CaptionSB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/oz"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="$9530.12" />

                <TextView
                    android:id="@+id/pointInfoDate"
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Jun 12, 12:30" />

                <!--Volume info-->

                <TextView
                    android:id="@+id/pointInfoVolumeTitle"
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Charts_Volume"
                    android:textColor="@color/grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/pointInfoPrice" />

                <TextView
                    android:id="@+id/pointInfoVolume"
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Charts_Volume"
                    android:textColor="@color/grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="$36,166B" />

                <!--MACD info-->

                <TextView
                    android:id="@+id/macdHistogram"
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lucian"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/pointInfoPrice"
                    tools:text="-163.24" />

                <TextView
                    android:id="@+id/macdSignal"
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/jacob"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="-123" />

                <TextView
                    android:id="@+id/macdValue"
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:textColor="@color/issyk_blue"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/macdSignal"
                    tools:text="-286.61" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coinRateLast"
                app:tabGravity="start"
                app:tabMode="scrollable" />

            <io.horizontalsystems.chartview.Chart
                android:id="@+id/chart"
                android:layout_width="0dp"
                android:layout_height="232dp"
                android:layout_marginTop="4dp"
                app:cursorColor="@color/oz"
                app:curvePressedColor="@color/oz"
                app:gridDashColor="@color/nina"
                app:gridTextColor="@color/nina"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chartPointsInfo"
                app:partialChartColor="@color/grey_50"
                app:timelineTextColor="@color/nina"
                app:trendDownColor="@color/red_d"
                app:trendUpColor="@color/green_d" />

            <View
                android:id="@+id/border3"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="8dp"
                android:background="@color/steel_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chart" />

            <RadioButton
                android:id="@+id/indicatorEMA"
                style="@style/RadioButtonThird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/Charts_IndicatorEMA"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@+id/border3" />

            <RadioButton
                android:id="@+id/indicatorMACD"
                style="@style/RadioButtonThird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/Charts_IndicatorMACD"
                app:layout_constraintStart_toEndOf="@id/indicatorEMA"
                app:layout_constraintTop_toTopOf="@+id/indicatorEMA" />

            <RadioButton
                android:id="@+id/indicatorRSI"
                style="@style/RadioButtonThird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/Charts_IndicatorRSI"
                app:layout_constraintStart_toEndOf="@id/indicatorMACD"
                app:layout_constraintTop_toTopOf="@+id/indicatorEMA" />

            <io.horizontalsystems.views.SettingsView
                android:id="@+id/ratingDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/indicatorEMA"
                app:position="single"
                app:title="A"
                app:value="Rating Details" />

            <View
                android:id="@+id/border4"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/steel_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingDetails" />

            <TextView
                android:id="@+id/priceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Charts_Price"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/border4" />

            <include
                android:id="@+id/priceData"
                layout="@layout/coin_price_change"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/priceTitle" />

            <View
                android:id="@+id/border5"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/steel_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priceData" />

            <TextView
                android:id="@+id/marketTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Charts_Market"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/border5" />

            <include
                android:id="@+id/marketData"
                layout="@layout/coin_market"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/marketTitle" />

            <io.horizontalsystems.views.SettingsView
                android:id="@+id/btcDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/marketData"
                app:position="single"
                app:title="BTC Markets" />

            <View
                android:id="@+id/border6"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/steel_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btcDetails" />

            <TextView
                android:id="@+id/performanceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Charts_Performance"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/border6" />

            <include
                android:id="@+id/marketPerformance"
                layout="@layout/coin_performance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/performanceTitle" />

            <View
                android:id="@+id/border7"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/steel_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/marketPerformance" />

            <TextView
                android:id="@+id/aboutTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Charts_About"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/border7" />

            <TextView
                android:id="@+id/aboutText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Bitcoin is a cryptocurrency and worldwide payment system. It is the first decentralized digital currency"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/aboutTitle" />

            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="32dp"
                android:text="@string/Charts_Category"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@+id/aboutText"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/categoryValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textAlignment="textEnd"
                android:textColor="@color/jacob"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toEndOf="@id/category"
                app:layout_constraintTop_toTopOf="@+id/category"
                tools:text="bitcoin.org" />

            <include
                layout="@layout/coin_links"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </io.horizontalsystems.bankwallet.ui.extensions.LockableNestedScrollView>
</FrameLayout>
